attempt 4 to fix CI build issue

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -242,6 +242,7 @@ steps:
   displayName: 'Building MSDOS build'
 - bash: |
     sudo apt-get install texlive
+    tlmgr init-usertree
     tlmgr install enumitem
     texhash
     make Guidebook
