--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -241,7 +241,7 @@ steps:
   workingDirectory: $(Agent.BuildDirectory)/$(netHackPath)
   displayName: 'Building MSDOS build'
 - bash: |
-    sudo apt install texlive-guesswhich texlive-latex-extra
+    sudo apt install texlive texlive-latex-extra
     make Guidebook
     make Guidebook.txt
     make Guidebook.pdf
